--- a/school_management/Templates/Admin_uNabvar.html
+++ b/school_management/Templates/Admin_uNabvar.html
@@ -27,5 +27,9 @@
                 <p>{{Teacher.Name}}</p>
             </div>
         </div>
+
+        <div class="logout">
+            <a href="{% url 'student_logout' %}">Logout</a>
+        </div>
     </div>
 </nav>
