--- a/school_management/Templates/login.html
+++ b/school_management/Templates/login.html
@@ -13,8 +13,8 @@
 <body>
     <div class="container">
         <div class="img">
-            <!-- <img src="./41Z_2106.w009.n001.5B.p8.5.jpg" alt=""> -->
-            <h3>School Management</h3>
+            <img src="{% static 'Images/login.jpg' %}" alt="">
+            <h3>School Management <br> Login</h3>
         </div>
         <div class="form-container">
             <h3>Here you can Login</h3>
@@ -29,11 +29,17 @@
                     <input type="password" id="password" name="password" required>
                 </div>
 
-                <div>
-                    <input type="radio" id="student" name="user_type" value="student">
-                    <label for="student">Student</label><br>
-                    <input type="radio" id="teacher" name="user_type" value="teacher">
-                    <label for="teacher">Teacher</label><br>
+                <div class="usertype_box">
+                    <!-- <label for="">UserType</label> -->
+                    <div class="d-flex">
+                        <input type="radio" id="student" name="user_type" value="student">
+                        <label for="student">Student</label><br>
+                    </div>
+                    <div class="d-flex">
+                        <input type="radio" id="teacher" name="user_type" value="teacher">
+                        <label for="teacher">Teacher</label><br>
+                    </div>
+
                 </div>
 
                 <button type="submit">Login</button>
