--- a/school_management/Templates/Registration_Form/Employee.html
+++ b/school_management/Templates/Registration_Form/Employee.html
@@ -7,7 +7,7 @@
         <div class="popup-content">
             <h4>FILL THE FORM TO ADD NEW EMPLOYEE</h4>
 
-          <form action="" method="POST">
+          <form action="" method="POST" enctype="multipart/form-data">
             {% csrf_token %}
             <label for="name">Name</label> 
             <input type="text" name="name"> 
