--- a/school_management/Templates/Registration_Form/Teacher.html
+++ b/school_management/Templates/Registration_Form/Teacher.html
@@ -7,7 +7,7 @@
         <div class="popup-content">
             <h4>FILL THE FORM TO ADD NEW TEACHER</h4>
 
-          <form action="" method="POST">
+          <form action="{% url 'admin_teacher' %}" method="POST" enctype="multipart/form-data">
             {% csrf_token %}
             <label for="name">Name</label> 
             <input type="text" name="name">
@@ -26,6 +26,9 @@
             
             <label for="salary">Salary</label>
             <input type="text" name="salary">
+
+            <label for="city">City</label>
+            <input type="text" name="city">
             
             <label for="image">Image</label> <br>
             <input type="file" name="image">
