--- a/school_management/Templates/Student_Table.html
+++ b/school_management/Templates/Student_Table.html
@@ -2,62 +2,27 @@
     <h4>Student Details</h4>
     <table class="student">
         <tr>
-            <th>Name</th>
             <th>ID</th>
-            <th>Date</th>
+            <th>Name</th>
+            <th>DOB</th>
+            <th>Registered Date</th>
             <th>Parent Name</th>
             <th>City</th>
             <th>Contact</th>
             <th>Class</th>
             <th>Action</th>
         </tr>
-        <tr>
-            <td>Abhishek Singh</td>
-            <td>198438</td>
-            <td>25/10/2023</td>
-            <td>Prem Singh</td>
-            <td>Jaipur</td>
-            <td>8532800542</td>
-            <td>VII</td>
-            <td><a href=""><span class="material-symbols-outlined">
-                        visibility
-                    </span></a>
-                <span class="material-symbols-outlined">
-                    edit_note
-                </span>
-                <span class="material-symbols-outlined">
-                    delete
-                </span>
-            </td>
-        </tr>
-        <tr>
-            <td>Abhishek Singh</td>
-            <td>198438</td>
-            <td>25/10/2023</td>
-            <td>Prem Singh</td>
-            <td>Jaipur</td>
-            <td>8532800542</td>
-            <td>VII</td>
-            <td><a href=""><span class="material-symbols-outlined">
-                        visibility
-                    </span></a>
-                <span class="material-symbols-outlined">
-                    edit_note
-                </span>
 
-                <span class="material-symbols-outlined">
-                    delete
-                </span>
-            </td>
-        </tr>
+        {% for student in Student %}
         <tr>
-            <td>Abhishek Singh</td>
-            <td>198438</td>
-            <td>25/10/2023</td>
-            <td>Prem Singh</td>
-            <td>Jaipur</td>
-            <td>8532800542</td>
-            <td>VII</td>
+            <td>{{student.id}}</td>
+            <td>{{student.Name}}</td>
+            <td>{{student.Dob}}</td>
+            <td>{{student.Registered}}</td>
+            <td>{{student.Father_name}}</td>
+            <td>{{student.City}}</td>
+            <td>+91-{{student.Contact}}</td>
+            <td>{{student.Std}}</td>
             <td><a href=""><span class="material-symbols-outlined">
                         visibility
                     </span></a>
@@ -69,5 +34,7 @@
                 </span>
             </td>
         </tr>
+        {% endfor %}
+   
     </table>
 </div>
