--- a/school_management/Templates/Admin_Dashboard.html
+++ b/school_management/Templates/Admin_Dashboard.html
@@ -26,7 +26,7 @@
                 </div>
                 <div class="category">
                     <p>Student</p>
-                    <h4>932</h4>
+                    <h4>{{student_length}}</h4>
                 </div>
             </div>
             <div class="card">
@@ -37,7 +37,7 @@
                 </div>
                 <div class="category">
                     <p>Teacher</p>
-                    <h4>786</h4>
+                    <h4>{{teacher_length}}</h4>
                 </div>
             </div>
             <div class="card">
