School Management Project

--- a/school_management/Templates/Admin_Dashboard.html
+++ b/school_management/Templates/Admin_Dashboard.html
@@ -25,7 +25,7 @@
                     </span>
                 </div>
                 <div class="category">
-                    <p>Student</p>
+                    <p>Total Student</p>
                     <h4>{{student_length}}</h4>
                 </div>
             </div>
@@ -36,7 +36,7 @@
                         </span>
                 </div>
                 <div class="category">
-                    <p>Teacher</p>
+                    <p>Total Teacher</p>
                     <h4>{{teacher_length}}</h4>
                 </div>
             </div>
@@ -47,8 +47,8 @@
                         </span>
                 </div>
                 <div class="category">
-                    <p>Employee</p>
-                    <h4>932</h4>
+                    <p>Total Employee</p>
+                    <h4>{{employee_length}}</h4>
                 </div>
             </div>
             <div class="card">
@@ -58,7 +58,7 @@
                         </span>
                 </div>
                 <div class="category">
-                    <p>Notes</p>
+                    <p>Total Notes</p>
                     <h4>932</h4>
                 </div>
             </div>
