--- a/school_management/Templates/Admin_Employee.html
+++ b/school_management/Templates/Admin_Employee.html
@@ -43,9 +43,9 @@
         <div class="table">
             <table class="student">
                 <tr>
-                    <th>Name</th>
                     <th>ID</th>
-                    <th>Date</th>
+                    <th>Name</th>
+                    <th>Register Date</th>
                     <th>Parent Name</th>
                     <th>City</th>
                     <th>Contact</th>
@@ -53,15 +53,16 @@
                     <th>Salary</th>
                     <th>Action</th>
                 </tr>
+                {% for emp in Employee %}
                 <tr>
-                    <td>Narendra Kumar</td>
-                    <td>198438</td>
-                    <td>25/10/2023</td>
-                    <td>Mohanlal Singh</td>
-                    <td>Jaipur</td>
-                    <td>8532800542</td>
-                    <td>Bus Driver</td>
-                    <td>8000</td>
+                    <td>{{emp.id}}</td>
+                    <td>{{emp.name}}</td>
+                    <td>{{emp.registered}}</td>
+                    <td>{{emp.parent_name}}</td>
+                    <td>{{emp.city}}</td>
+                    <td>+91-{{emp.contact}}</td>
+                    <td>{{emp.role}}</td>
+                    <td>{{emp.salary}}</td>
                     <td><span class="material-symbols-outlined">
                             visibility
                         </span>
@@ -70,40 +71,9 @@
                         </span>
                     </td>
                 </tr>
-                <tr>
-                    <td>Narendra Kumar</td>
-                    <td>198438</td>
-                    <td>25/10/2023</td>
-                    <td>Mohanlal Singh</td>
-                    <td>Jaipur</td>
-                    <td>8532800542</td>
-                    <td>Bus Driver</td>
-                    <td>8000</td>
-                    <td><span class="material-symbols-outlined">
-                            visibility
-                        </span>
-                        <span class="material-symbols-outlined">
-                            delete
-                        </span>
-                    </td>
-                </tr>
-                <tr>
-                    <td>Narendra Kumar</td>
-                    <td>198438</td>
-                    <td>25/10/2023</td>
-                    <td>Mohanlal Singh</td>
-                    <td>Jaipur</td>
-                    <td>8532800542</td>
-                    <td>Bus Driver</td>
-                    <td>8000</td>
-                    <td><span class="material-symbols-outlined">
-                            visibility
-                        </span>
-                        <span class="material-symbols-outlined">
-                            delete
-                        </span>
-                    </td>
-                </tr>
+                  
+                {% endfor %}
+                
             </table>
         </div>
 
