School Management Project

--- a/school_management/Templates/Admin_Dashboard.html
+++ b/school_management/Templates/Admin_Dashboard.html
@@ -58,8 +58,8 @@
                         </span>
                 </div>
                 <div class="category">
-                    <p>Total Notes</p>
-                    <h4>932</h4>
+                    <p>Total Notice</p>
+                    <h4>{{notice_length}}</h4>
                 </div>
             </div>
         </div>
