--- a/school_management/Templates/Teacher_Home.html
+++ b/school_management/Templates/Teacher_Home.html
@@ -42,5 +42,7 @@
     </div>
 
     {% include "CopyRight.html" %}
+
+    <script src="{% static 'JavaScript/FormPop.js' %}"></script>
 </body>
 </html>
