School Management Project

--- a/school_management/StaticsFiles/Styles/Teacher_Dashboard.css
+++ b/school_management/StaticsFiles/Styles/Teacher_Dashboard.css
@@ -31,6 +31,7 @@
         }
 
         >.actions {
+            margin-top: 10px;
             display: flex;
             gap: 5px;
             justify-content: flex-end;
