--- a/school_management/Templates/Admin_Teacher.html
+++ b/school_management/Templates/Admin_Teacher.html
@@ -62,7 +62,7 @@
                     </div>
                     <div class="right">
                         <button title="Update">
-                            <a href="">
+                            <a href="{% url 'update_teacher' teacher.id %}">
                                 <span class="material-symbols-outlined">
                                     edit_note
                                 </span>
